# github-actions-test

./: CMakeLists.txt  README.md  test.cpp
.github/workflows/: code-coverage.yml  upload-coverage.yml
.github/workflows/install-dependencies-ubuntu/: action.yml
src/: CMakeLists.txt  a.cpp  a.h
test/: CMakeLists.txt  test.cpp
